--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -313,7 +313,7 @@
                                 <p id="02">Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(01)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -332,7 +332,7 @@
                                 <p id="12">Maehongson</p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(02)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                                 <p id="22">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(03)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                                 <p id="32">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(04)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -389,7 +389,7 @@
                                 <p id="42">Krabi</p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(04)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                 </div>
                 </div>
                 </div>
@@ -467,6 +467,7 @@
 
 
     <script>
+        var place_id = [""]
         $(document).ready(function() {
             try {
                 var json_str = getCookie('mycookie');
@@ -480,12 +481,15 @@
         });
 
         function fav(count) {
+
             alert("faving")
-            console.log(place_id[count])
-            arr.push(place_id[count])
+            var json_str = JSON.stringify(arr);
+
+            console.log(JSON.stringify(place_id[count]).slice(1, -1))
+            arr.push(JSON.stringify(place_id[count]).slice(1, -1))
                 //arr=['qwe','qwe','qwe']
             console.log(arr)
-            var json_str = JSON.stringify(arr);
+
             //createCookie('mycookie', json_str);
             setCookie("mycookie", json_str, 30);
         }
@@ -515,7 +519,9 @@
     </script>
     <script>
         $(document).ready(function() {
-            place_id = ""
+
+
+
             $.ajaxSetup({
                 headers: {
                     'Authorization': 'bearer G(LsNMYQxwthtlPATlMG9zWWTmzqnzcNuK6fQeo86o0KzNSdoF2kMFReYcJ2KwTCpq8QfxXKL00BqUe7Jt4TJtW=====2',
@@ -553,25 +559,25 @@
                 document.getElementById("12").innerHTML = JSON.stringify(json.result[1].destination).slice(1, -1)
                 document.getElementById("13").src = JSON.stringify(json.result[1].thumbnail_url).slice(1, -1)
                 document.getElementById("14").href = "single-listing?type=" + JSON.stringify(json.result[1].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[1].place_id).slice(1, -1)
-                place_id[1] = json.result[1].place_id
+                place_id[1] = JSON.stringify(json.result[1].place_id).slice(1, -1)
 
                 document.getElementById("21").innerHTML = JSON.stringify(json.result[2].place_name).slice(1, -1)
                 document.getElementById("22").innerHTML = JSON.stringify(json.result[2].destination).slice(1, -1)
                 document.getElementById("23").src = JSON.stringify(json.result[2].thumbnail_url).slice(1, -1)
                 document.getElementById("24").href = "single-listing?type=" + JSON.stringify(json.result[2].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[2].place_id).slice(1, -1)
-                place_id[2] = json.result[2].place_id
+                place_id[2] = JSON.stringify(json.result[2].place_id).slice(1, -1)
 
                 document.getElementById("31").innerHTML = JSON.stringify(json.result[3].place_name).slice(1, -1)
                 document.getElementById("32").innerHTML = JSON.stringify(json.result[3].destination).slice(1, -1)
                 document.getElementById("33").src = JSON.stringify(json.result[3].thumbnail_url).slice(1, -1)
                 document.getElementById("34").href = "single-listing?type=" + JSON.stringify(json.result[3].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[3].place_id).slice(1, -1)
-                place_id[3] = json.result[3].place_id
+                place_id[3] = JSON.stringify(json.result[3].place_id).slice(1, -1)
 
                 document.getElementById("41").innerHTML = JSON.stringify(json.result[4].place_name).slice(1, -1)
                 document.getElementById("42").innerHTML = JSON.stringify(json.result[4].destination).slice(1, -1)
                 document.getElementById("43").src = JSON.stringify(json.result[4].thumbnail_url).slice(1, -1)
                 document.getElementById("44").href = "single-listing?type=" + JSON.stringify(json.result[4].category_code).slice(1, -1) + "&id=" + JSON.stringify(json.result[4].place_id).slice(1, -1)
-                place_id[4] = json.result[4].place_id
+                place_id[4] = JSON.stringify(json.result[4].place_id).slice(1, -1)
             });
         });
     </script>
