--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -298,9 +298,9 @@
             <!-- Explore Search Result -->
             <div class="explore-search-result">
                 <!-- Single Features Area -->
-                <div id="04" onclick="window.location='#';">
+                <div>
                     <div class="single-features-area">
-                        <img id="03" src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                        <img id="03" onclick=map(latlong) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 2800-9000 THB</p>
@@ -309,7 +309,7 @@
                             <div class="feature-title">
 
 
-                                <h5 id="01">Lantana Resort</h5>
+                                <a id="04" href="listing"><h5 id="01">Lantana Resort</h5></a>
                                 <p id="02">Bangkok</p>
                             </div>
                             <div class="feature-favourite">
@@ -467,7 +467,7 @@
     <!-- favorite -->
     <script src="js/favorite.js"></script>
     <script>
-        $(document).ready(setup(),readcookie());
+        $(document).ready(setup(),readcookie(),map("กรุงเทพ"));
     </script>
 </body>
 
