--- a/views/index.ejs
+++ b/views/index.ejs
@@ -431,7 +431,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a class="map" href="/listing?123456"><img src="img/core-img/map.png"></a>
+                                <!-- <a class="map" href="/listing?123456"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -449,7 +449,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -467,7 +467,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -485,7 +485,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -503,7 +503,7 @@
                             <!-- Price -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -544,7 +544,7 @@
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -562,7 +562,7 @@
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">9.5</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -580,7 +580,7 @@
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.2</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -598,7 +598,7 @@
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">8.7</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -616,7 +616,7 @@
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <!-- <a href="#">9.8</a> -->
-                                <a href="#"><img src="img/core-img/map.png"></a>
+                                <!-- <a href="#"><img src="img/core-img/map.png"></a> -->
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
