--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -179,31 +179,29 @@
             <!-- Explore Search Result -->
             <div class="explore-search-result">
                 <!-- Single Features Area -->
-                <div>
-                    <div class="single-features-area">
-                        <img id="03" onclick=map(lat[0]+lng[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
-                        <div class="feature-content d-flex align-items-center justify-content-between">
-                            <div class="feature-title">
-                                <a id="04">
-                                    <h5 id="01"></h5>
-                                </a>
-                                <p id="02"></p>
-                            </div>
-                            <div class="feature-favourite">
-                                <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                            </div>
+                <div class="single-features-area">
+                    <img class='pic' onclick=map(lat[0]+lng[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                    <div class="feature-content d-flex align-items-center justify-content-between">
+                        <div class="feature-title">
+                            <a class="url">
+                                <h5 class="name"></h5>
+                            </a>
+                            <p class="destination"></p>
+                        </div>
+                        <div class="feature-favourite">
+                            <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img id="13" onclick=map(lat[1]+lng[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
+                    <img class='pic' onclick=map(lat[1]+lng[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <a id="14">
-                                <h5 id="11"></h5>
+                            <a class="url">
+                                <h5 class="name"></h5>
                             </a>
-                            <p id="12"></p>
+                            <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -212,14 +210,14 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img id="23" onclick=map(lat[2]+lng[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' onclick=map(lat[2]+lng[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <a id="24">
-                                <h5 id="21"></h5>
+                            <a class="url">
+                                <h5 class="name"></h5>
                             </a>
 
-                            <p id="22"></p>
+                            <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -228,15 +226,15 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img id="33" onclick=map(lat[3]+lng[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' onclick=map(lat[3]+lng[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
 
-                            <a id="34">
-                                <h5 id="31"></h5>
+                            <a class="url">
+                                <h5 class="name"></h5>
                             </a>
 
-                            <p id="32"></p>
+                            <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -245,14 +243,14 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img id="43" onclick=map(lat[4]+lng[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                    <img class='pic' onclick=map(lat[4]+lng[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <a id="44">
-                                <h5 id="41"></h5>
+                            <a class="url">
+                                <h5 class="name"></h5>
                             </a>
 
-                            <p id="42"></p>
+                            <p class="destination"></p>
                         </div>
                         <div class="feature-favourite">
                             <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
